--- a/src/styles/scss-critical/sections/menus/_lg-menu-tabs.scss
+++ b/src/styles/scss-critical/sections/menus/_lg-menu-tabs.scss
@@ -9,7 +9,7 @@
 .large-menu__tab {
     flex: 1 0 33.33%;
     padding: 1rem;
-    transition: 0.5s;
+    transition: background-color 0.5s;
     position: relative;
     text-align: center;
     cursor: pointer;
