--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -6,7 +6,9 @@
 .small-menu__image-description {
     background-color: $orange-3;
     color: $white-3;
-    border-top: 1px solid $orange-3;
+    border-top: 1px solid #be7b28;
+    color: whitesmoke;
+    background-color: #be7b28;
 }
 
 //Next & previous buttons
