--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -7,8 +7,8 @@
     background-color: $orange-3;
     color: $white-3;
     border-top: 1px solid #be7b28;
-    color: whitesmoke;
-    background-color: #be7b28;
+    color: #FFF0B8;
+    background-color: #A35A00;
 }
 
 //Next & previous buttons
