--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -8,7 +8,7 @@
     color: $white-3;
     border-top: 1px solid #be7b28;
     color: #FFF0B8;
-    background-color: #A35A00;
+    background-color: rgb(142, 50, 0);
 }
 
 //Next & previous buttons
