--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -7,8 +7,8 @@
     background-color: $orange-3;
     color: $white-3;
     border-top: 1px solid #be7b28;
-    color: #FFF0B8;
-    background-color: rgb(142, 50, 0);
+    color: white;
+    background-color: #8e3200;
 }
 
 //Next & previous buttons
