--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -4,11 +4,9 @@
 // carousel
 /* Caption text */
 .small-menu__image-description {
-    background-color: $orange-3;
-    color: $white-3;
     border-top: 1px solid #be7b28;
     color: white;
-    background-color: #8e3200;
+    background-color: black;
 }
 
 //Next & previous buttons
