--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -5,8 +5,8 @@
 /* Caption text */
 .small-menu__image-description {
     border-top: 1px solid #8e3200;
-    background-color: #FFF0B8;
-    color: #8e3200;
+    color: #FFF0B8;
+    background-color: #8e3200;
 }
 
 //Next & previous buttons
