--- a/src/styles/scss-non-critical/sections/menus/_sm-menu-carousel.scss
+++ b/src/styles/scss-non-critical/sections/menus/_sm-menu-carousel.scss
@@ -99,10 +99,12 @@
 
 @keyframes fade {
     from {
-        opacity: 0.6;
+        // opacity: 0.6;
+        visibility: hidden;
     }
 
     to {
-        opacity: 1;
+        // opacity: 1;
+        visibility: visible;
     }
 }
