revised the opacity again

--- a/src/styles/scss-non-critical/sections/menus/_sm-menu-carousel.scss
+++ b/src/styles/scss-non-critical/sections/menus/_sm-menu-carousel.scss
@@ -99,12 +99,10 @@
 
 @keyframes fade {
     from {
-        // opacity: 0.6;
-        visibility: hidden;
+        opacity: 0.8;
     }
 
     to {
-        // opacity: 1;
-        visibility: visible;
+        opacity: 1;
     }
 }
