--- a/src/styles/scss-common-partials/_variables.scss
+++ b/src/styles/scss-common-partials/_variables.scss
@@ -30,7 +30,7 @@ $black-1a: rgba(0, 0, 0, 0.7);
 $black-2: rgb(33, 37, 41);
 $black-2a: rgba(33, 37, 41, 0.7);
 
-$large-menu-border-color: 1px solid $brown-2;
+$large-menu-border-color: 1px solid rgba(226, 186, 137, 0.842);
 
 // max-width variables within container for veritcal alignment purpose in different screen size
 $mw-xxs: 300;
