--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -4,15 +4,15 @@
 // carousel
 /* Caption text */
 .small-menu__image-description {
-    border-top: 1px solid #8e3200;
+    border-top: 1px solid #A35A00;
     color: #FFF0B8;
-    background-color: #8e3200;
+    background-color: #A35A00;
 }
 
 //Next & previous buttons
 .small-menu__slideshow-button--prev,
 .small-menu__slideshow-button--next {
-    color: #A35A00;
+    color: rgb(229, 186, 115);
 }
 
 .small-menu__slideshow-dot {
@@ -21,7 +21,7 @@
 
 .small-menu__slideshow-dot:hover,
 .slideshow-dot--active {
-    background-color: #A35A00;
+    background-color: rgb(229, 186, 115);
 }
 
 // reservation-form
