--- a/src/styles/scss-non-critical/sections/_footer.scss
+++ b/src/styles/scss-non-critical/sections/_footer.scss
@@ -7,6 +7,10 @@ footer {
     padding-block: calc(1rem + 1.5vw);
 }
 
+.social-icons {
+    margin-bottom: 0.5rem;
+}
+
 .social-icons i {
-    margin: 0.5rem 0.625rem 1.25rem 0.625rem;
+    margin: 0.5rem 0.625rem;
 }
