--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -5,8 +5,8 @@
 /* Caption text */
 .small-menu__image-description {
     border-top: 1px solid #A35A00;
+    color: #FFF0B8;
     background-color: #A35A00;
-    color: #fff4ca;
 }
 
 //Next & previous buttons
