amended price tag color

--- a/src/styles/scss-critical/partials/_colors.scss
+++ b/src/styles/scss-critical/partials/_colors.scss
@@ -136,5 +136,7 @@ hr {
 .large-menu__item-price {
     background-color: $orange-5;
     color: $white-1;
-    // background-color: rgb(215, 168, 110);
+    background-color: #fff6d7ce;
+    color: #A35A00;
+    box-shadow: 1px 1px 2px rgb(197, 137, 64);
 }
