updated form time input using options

--- a/src/styles/scss-non-critical/sections/_footer.scss
+++ b/src/styles/scss-non-critical/sections/_footer.scss
@@ -11,6 +11,10 @@ footer {
     margin-bottom: 0.5rem;
 }
 
+.social-icons a {
+    padding-block: 0.3rem;
+}
+
 .social-icons i {
     margin: 0.5rem 0.625rem;
 }
