--- a/src/styles/scss-non-critical/non-critical-style.css
+++ b/src/styles/scss-non-critical/non-critical-style.css
@@ -10,11 +10,11 @@
   color: rgb(229, 186, 115);
 }
 
-.small-menu__slideshow-dot {
+.small-menu__carousel-dot {
   background-color: rgb(255, 231, 204);
 }
 
-.small-menu__slideshow-dot:hover,
+.small-menu__carousel-dot:hover,
 .slideshow-dot--active {
   background-color: rgb(248, 203, 166);
 }
@@ -68,9 +68,11 @@ textarea:focus {
   color: rgb(255, 255, 255);
   box-shadow: 1px 1px 1px rgb(102, 102, 102);
 }
+
 .reservation__form--button:hover {
   outline: 3px solid rgb(255, 165, 0);
 }
+
 .reservation__form--button:focus {
   outline: 3px solid rgb(255, 165, 0);
 }
@@ -136,6 +138,7 @@ select {
   overflow: hidden;
   transform: translateX(-50%);
 }
+
 .skip-link:focus {
   position: fixed;
   width: auto;
@@ -167,37 +170,43 @@ select {
   max-width: 18.75rem;
   margin-inline: auto;
 }
+
 @media all and (min-width: 28.125em) {
   .reservation__form {
     max-width: 26.5625rem;
   }
 }
+
 @media all and (min-width: 36em) {
   .reservation__form {
     max-width: 37.5rem;
   }
 }
+
 @media all and (min-width: 48em) {
   .reservation__form {
     max-width: 50rem;
   }
 }
+
 @media all and (min-width: 62em) and (max-width: 78.12375em) {
   .reservation__form {
     max-width: 62.5rem;
   }
 }
 
-.reservation__form > div {
+.reservation__form>div {
   max-width: 18.75rem;
 }
+
 @media all and (min-width: 28.125em) {
-  .reservation__form > div {
+  .reservation__form>div {
     max-width: 26.5625rem;
   }
 }
+
 @media all and (min-width: 36em) {
-  .reservation__form > div {
+  .reservation__form>div {
     max-width: 100%;
   }
 }
@@ -205,6 +214,7 @@ select {
 section.findus {
   padding-block: 2rem;
 }
+
 @media all and (min-width: 78.125em) {
   section.findus {
     padding-block: 3.5rem;
@@ -216,27 +226,32 @@ section.findus {
   flex-direction: column;
   margin-inline: auto;
 }
+
 @media all and (min-width: 28.125em) {
   .findus-container {
     max-width: 26.5625rem;
   }
 }
+
 @media all and (min-width: 36em) {
   .findus-container {
     max-width: 37.5rem;
     flex-direction: row;
   }
 }
+
 @media all and (min-width: 48em) {
   .findus-container {
     max-width: 50rem;
   }
 }
+
 @media all and (min-width: 62em) {
   .findus-container {
     max-width: 62.5rem;
   }
 }
+
 @media all and (min-width: 78.125em) {
   .findus-container {
     max-width: 93.75rem;
@@ -244,7 +259,7 @@ section.findus {
 }
 
 /* Slideshow container */
-.small-menu__slideshow-container {
+.small-menu__carousel__track-container {
   position: relative;
   margin: auto;
   margin-top: 1.5625rem;
@@ -283,8 +298,8 @@ section.findus {
   font-size: 1rem;
   transition: 0.6s ease;
   -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  user-select: none;
   border: 0;
   background-color: transparent;
 }
@@ -298,6 +313,7 @@ section.findus {
 }
 
 @media all and (min-width: 28.125em) {
+
   .small-menu__slideshow-button--prev,
   .small-menu__slideshow-button--next {
     top: 42%;
@@ -305,13 +321,16 @@ section.findus {
     transition: 0.6s ease;
     padding: 1rem;
   }
+
   .small-menu__slideshow-button--prev {
     left: -30px;
   }
+
   .small-menu__slideshow-button--next {
     right: -30px;
   }
 }
+
 /* The dots indicators */
 .small-menu__slideshow-dots {
   text-align: center;
@@ -339,14 +358,17 @@ section.findus {
   from {
     opacity: 0.4;
   }
+
   to {
     opacity: 1;
   }
 }
+
 .reservation {
   display: flex;
   flex-direction: column;
 }
+
 @media all and (min-width: 78.125em) {
   .reservation {
     display: grid;
@@ -360,6 +382,7 @@ section.findus {
   grid-template-rows: repeat(6, auto) repeat(2, auto);
   row-gap: 0.625rem;
 }
+
 @media all and (min-width: 36em) {
   .reservation__form {
     grid-template-columns: repeat(2, 1fr);
@@ -367,6 +390,7 @@ section.findus {
     gap: 1.25rem;
   }
 }
+
 @media all and (min-width: 62em) and (max-width: 78.12375em) {
   .reservation__form {
     grid-template-columns: repeat(3, 1fr);
@@ -378,67 +402,85 @@ section.findus {
   .reservation__form--name {
     grid-area: 1/1/2/2;
   }
+
   .reservation__form--phone {
     grid-area: 1/2/2/3;
   }
+
   .reservation__form--email {
     grid-area: 2/1/3/2;
   }
+
   .reservation__form--guest-number {
     grid-area: 2/2/3/3;
   }
+
   .reservation__form--date {
     grid-area: 3/1/4/2;
   }
+
   .reservation__form--time {
     grid-area: 3/2/4/3;
   }
+
   .reservation__form--message {
     grid-area: 4/1/5/3;
   }
+
   .reservation__form--bottom-part {
     grid-area: 5/1/6/3;
   }
 }
+
 @media all and (min-width: 62em) and (max-width: 78.12375em) {
   .reservation__form--email {
     grid-area: 1/3/2/4;
   }
+
   .reservation__form--guest-number {
     grid-area: 2/1/3/2;
   }
+
   .reservation__form--date {
     grid-area: 2/2/3/3;
   }
+
   .reservation__form--time {
     grid-area: 2/3/3/4;
   }
+
   .reservation__form--message {
     grid-area: 3/1/5/4;
   }
+
   .reservation__form--bottom-part {
     grid-area: 5/1/6/4;
   }
 }
+
 #reservation h1 {
   margin-bottom: 1rem;
   text-align: center;
 }
+
 @media all and (min-width: 28.125em) {
   #reservation h1 {
     margin-bottom: 2rem;
   }
 }
+
 @media all and (min-width: 48em) {
   #reservation h1 {
     margin-bottom: 2.5rem;
   }
 }
+
 @media all and (min-width: 62em) {
   #reservation h1 {
     margin-bottom: 3rem;
   }
 }
+
 @media all and (min-width: 78.125em) {
   #reservation h1 {
     margin-bottom: 3.5rem;
@@ -448,6 +490,7 @@ section.findus {
 .reservation__photo {
   display: none;
 }
+
 @media all and (min-width: 28.125em) {
   .reservation__photo {
     display: flex;
@@ -456,6 +499,7 @@ section.findus {
     padding-bottom: 1.5rem;
   }
 }
+
 @media all and (min-width: 78.125em) {
   .reservation__photo {
     padding-bottom: 5.5rem;
@@ -471,6 +515,7 @@ section.findus {
   border-radius: 0.375rem;
   padding: 0.25rem;
 }
+
 @media all and (min-width: 36em) {
   .reservation__photo img {
     max-width: 37.5rem;
@@ -496,6 +541,7 @@ section.findus {
   background-clip: padding-box;
   border-radius: 0.375rem;
 }
+
 @media all and (min-width: 62em) {
   .textarea-control {
     height: 7.5rem;
@@ -521,12 +567,14 @@ section.findus {
 .findus__logofont-container {
   display: none;
 }
+
 @media all and (min-width: 62em) {
   .findus__logofont-container {
     display: block;
     flex: 1 0 33.33%;
   }
 }
+
 @media all and (min-width: 78.125em) {
   .findus__logofont-container {
     flex: 1 0 50%;
@@ -541,25 +589,33 @@ section.findus {
   display: flex;
   justify-content: center;
 }
+
 @media all and (min-width: 18.75em) {
+
   .findus__contact-container,
   .findus__openhour-container {
     margin: 0 auto;
   }
 }
+
 @media all and (min-width: 36em) {
+
   .findus__contact-container,
   .findus__openhour-container {
     flex: 1 0 47.5%;
   }
 }
+
 @media all and (min-width: 62em) {
+
   .findus__contact-container,
   .findus__openhour-container {
     flex: 1 0 33.33%;
   }
 }
+
 @media all and (min-width: 78.125em) {
+
   .findus__contact-container,
   .findus__openhour-container {
     flex: 1 0 25%;
@@ -577,6 +633,7 @@ section.findus {
     padding-top: 2rem;
   }
 }
+
 @media all and (min-width: 62em) {
   .findus__openhour-container {
     justify-content: flex-end;
@@ -588,7 +645,9 @@ section.findus {
   max-width: 16.875rem;
   width: 100%;
 }
+
 @media all and (min-width: 36em) {
+
   .findus__contact-content,
   .findus__openhour-content {
     max-width: 20rem;
@@ -606,13 +665,14 @@ section.findus {
 .findus__grid {
   text-align: center;
 }
+
 @media all and (min-width: 18.75em) {
   .findus__grid {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(2, auto);
     -moz-column-gap: 0.625rem;
-         column-gap: 0.625rem;
+    column-gap: 0.625rem;
     row-gap: 0;
     justify-content: center;
     align-items: start;
@@ -627,6 +687,7 @@ section.findus {
 .openhour-grid--small {
   text-align: center;
 }
+
 @media all and (min-width: 18.75em) {
   .openhour-grid--small {
     display: none;
@@ -640,13 +701,14 @@ section.findus {
 .openhour-grid--large {
   display: none;
 }
+
 @media all and (min-width: 18.75em) {
   .openhour-grid--large {
     display: grid;
     grid-template-rows: repeat(7, 1fr);
     grid-template-columns: repeat(2, auto);
     -moz-column-gap: 0.625rem;
-         column-gap: 0.625rem;
+    column-gap: 0.625rem;
     row-gap: 0;
     justify-content: center;
     align-items: start;
@@ -665,4 +727,6 @@ footer {
 
 .social-icons i {
   margin: 0.5rem 0.625rem 1.25rem 0.625rem;
-}/*# sourceMappingURL=non-critical-style.css.map */
+}
+
+/*# sourceMappingURL=non-critical-style.css.map */
