--- a/src/styles/scss-non-critical/sections/menus/_sm-menu-carousel.scss
+++ b/src/styles/scss-non-critical/sections/menus/_sm-menu-carousel.scss
@@ -12,23 +12,28 @@
 /* Hide the images by default */
 .small-menu__carousel__slide {
     display: none;
+    left: 50px;
+    transition: 0.5s;
 }
 
 .small-menu__carousel__slide.current-slide {
-    animation-name: example;
-    animation-duration: 1s;
-    position: relative;
+    // animation-name: carousel;
+    // animation-duration: 1s;
+    display: block;
+    // position: relative;
+    left: 0px;
+    transition: 0.5s;
 }
 
-@keyframes example {
-    from {
-        left: 50px;
-    }
+// @keyframes carousel {
+//     from {
+//         left: 50px;
+//     }
 
-    to {
-        left: 0px;
-    }
-}
+//     to {
+//         left: 0px;
+//     }
+// }
 
 .small-menu__carousel__image {
     display: block;
@@ -101,7 +106,7 @@
     height: 0.5rem;
     width: 0.5rem;
     margin: 0 3px;
-    padding-inline: 1px;
+    padding: 1px;
     border-radius: 100%;
     display: inline-block;
     transition: background-color 0.6s ease;
@@ -111,15 +116,15 @@
 /* Fading animation */
 .small-menu__carousel__slide--fade {
     animation-name: fade;
-    animation-duration: 3.5s;
+    animation-duration: 0.5s;
 }
 
-// @keyframes fade {
-//     from {
-//         opacity: 0.9;
-//     }
+@keyframes fade {
+    from {
+        opacity: 0.9;
+    }
 
-//     to {
-//         opacity: 1;
-//     }
-// }
+    to {
+        opacity: 1;
+    }
+}
