--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -20,7 +20,7 @@
 }
 
 .small-menu__carousel-dot:hover,
-.small-menu__carousel-dot.current-slide {
+.small-menu__carousel-dot.current-dot {
     background-color: rgb(195, 129, 84);
 }
 
