large menu fade in animation

--- a/src/styles/scss-critical/sections/menus/_lg-menu-contents.scss
+++ b/src/styles/scss-critical/sections/menus/_lg-menu-contents.scss
@@ -9,6 +9,17 @@
     column-gap: 0px;
     row-gap: 0px;
     border-top: 0px;
+    animation: fadeIn 2s;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 /* menu description */
@@ -16,6 +27,7 @@
     padding: 2%;
     padding-left: calc(0.5rem + 1vw);
     display: inline-block;
+
 }
 
 .large-menu__item {
