--- a/src/styles/scss-non-critical/sections/menus/_sm-menu-carousel.scss
+++ b/src/styles/scss-non-critical/sections/menus/_sm-menu-carousel.scss
@@ -16,6 +16,7 @@
 
 /* Fading animation */
 .small-menu__carousel__slide.current-slide {
+    display: block;
     animation-name: fade;
     animation-duration: 0.5s;
 }
