--- a/src/styles/scss-common-partials/_breakpoints.scss
+++ b/src/styles/scss-common-partials/_breakpoints.scss
@@ -16,7 +16,8 @@ $screen-breakpoints: (
     sm: 576,
     md: 768,
     lg: 992,
-    xl: 1250
+    xl: 1220,
+    xxl: 1400,
 );
 
 $breakpoints-min: f.generate-breakpoints($screen-breakpoints, calculate-em-min);
