--- a/src/styles/scss-critical/partials/_typography.scss
+++ b/src/styles/scss-critical/partials/_typography.scss
@@ -36,8 +36,8 @@ body {
 }
 
 // menu
-#menu h1,
-#reservation h1 {
+#menu>h1,
+#reservation>h1 {
     font-size: clamp(2.2rem, 2rem + 1vw, 3rem);
     text-shadow: 2px 3px $pink-1;
 }
