reservation form default time, at least for the selected date part, finished

--- a/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
+++ b/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
@@ -3,8 +3,8 @@
 @use '../../../scss-common-partials/mixins' as *;
 
 .reservation__message-container {
-    // display: none;
-    display: flex;
+    display: none;
+    // display: flex;
     justify-content: center;
     align-items: center;
     position: fixed;
