--- a/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
+++ b/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
@@ -21,7 +21,7 @@
 .reservation__message-content {
     background-color: #fefefe;
     border: none;
-    width: 80%;
+    width: auto;
     box-shadow: 0px 0px 3px grey;
 }
 
@@ -43,13 +43,32 @@
     right: 0;
 }
 
+.reservation__message-content p,
+.reservation__message-list {
+    margin-inline: 1.5rem;
+
+    @include min-mq(sm) {
+        margin-inline: 4.5rem;
+    }
+}
+
 .reservation__message-content p {
-    padding: 1.5rem 1rem 0;
+    padding-top: 1.5rem;
 }
 
 .reservation__message-list {
-    padding: 1rem;
     padding-bottom: 1.5rem;
+
+    @include min-mq(xs) {
+        display: grid;
+        grid-template-rows: repeat(7, 1fr);
+        grid-template-columns: repeat(2, auto);
+        column-gap: f.rem(12);
+        row-gap: 0;
+        justify-content: center;
+        align-items: start;
+        text-align: left;
+    }
 }
 
 .reservation__message__bottom-buttons {
