revised from 300px to 40vh for message-list

--- a/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
+++ b/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
@@ -73,7 +73,9 @@
 .reservation__message-list {
     padding-bottom: 1rem;
     overflow: auto;
-    height: f.rem(300);
+    height: 40vh;
+    height: 40dvh;
+    height: 40svh;
 
     @include min-mq(sm) {
         padding-bottom: 1.5rem;
