--- a/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
+++ b/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
@@ -77,11 +77,6 @@
     height: 40dvh;
     height: 40svh;
 
-    @include min-mq(sm) {
-        padding-bottom: 1.5rem;
-        height: auto;
-    }
-
     @include min-mq(xs) {
         display: grid;
         grid-template-rows: repeat(7, auto);
@@ -91,6 +86,14 @@
         justify-content: center;
         align-items: start;
         text-align: left;
+        height: 50vh;
+        height: 50dvh;
+        height: 50svh;
+    }
+
+    @include min-mq(sm) {
+        padding-bottom: 1.5rem;
+        height: auto;
     }
 }
 
