--- a/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
+++ b/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
@@ -77,6 +77,12 @@
     height: 40dvh;
     height: 40svh;
 
+    @include min-mq(xxs) {
+        height: 50vh;
+        height: 50dvh;
+        height: 50svh;
+    }
+
     @include min-mq(xs) {
         display: grid;
         grid-template-rows: repeat(7, auto);
@@ -86,9 +92,9 @@
         justify-content: center;
         align-items: start;
         text-align: left;
-        height: 50vh;
-        height: 50dvh;
-        height: 50svh;
+        // height: 50vh;
+        // height: 50dvh;
+        // height: 50svh;
     }
 
     @include min-mq(sm) {
