--- a/src/styles/scss-common-partials/_mixins.scss
+++ b/src/styles/scss-common-partials/_mixins.scss
@@ -80,4 +80,8 @@
     @include min-mq(xl) {
         margin-bottom: 3.5rem;
     }
+
+    @include min-mq(xxl) {
+        margin-bottom: 4rem;
+    }
 }
