--- a/src/styles/scss-non-critical/sections/_footer.scss
+++ b/src/styles/scss-non-critical/sections/_footer.scss
@@ -1,10 +1,28 @@
+@use '../../scss-common-partials/mixins' as *;
+
 footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding-block: calc(1rem + 1.5vw);
+    padding-block: 1.5rem;
+
+    @include min-mq (xs) {
+        padding-block: 1.75rem;
+    }
+
+    @include min-mq (sm) {
+        padding-block: 2rem;
+    }
+
+    @include min-mq (md) {
+        padding-block: 2.25rem;
+    }
+
+    @include min-mq (lg) {
+        padding-block: 2.5rem;
+    }
 }
 
 .social-icons {
