amended the padding-block of sections

--- a/src/styles/scss-common-partials/_variables.scss
+++ b/src/styles/scss-common-partials/_variables.scss
@@ -22,6 +22,7 @@ $brown-2: rgb(163, 90, 0);
 $brown-3: rgb(197, 137, 64);
 $brown-4: rgb(195, 129, 84);
 $brown-5: rgba(226, 186, 137, 0.842);
+$brown-6: rgb(128, 70, 0);
 $grey-1: rgb(92, 92, 92);
 $grey-2: rgb(206, 212, 218);
 $grey-3: rgb(119, 119, 119);
