--- a/src/styles/scss-non-critical/layouts/_find-us.scss
+++ b/src/styles/scss-non-critical/layouts/_find-us.scss
@@ -5,6 +5,14 @@
 section.findus {
     padding-block: 2rem;
 
+    @include min-mq (md) {
+        padding-block: 2.5rem;
+    }
+
+    @include min-mq (lg) {
+        padding-block: 3rem;
+    }
+
     @include min-mq (xl) {
         padding-block: 3.5rem;
     }
@@ -12,8 +20,6 @@ section.findus {
 
 // for whole page vertical alignment
 .findus-container {
-    display: flex;
-    flex-direction: column;
     margin-inline: auto;
 
     @include min-mq (xs) {
@@ -22,7 +28,6 @@ section.findus {
 
     @include min-mq (sm) {
         max-width: f.rem($mw-sm);
-        flex-direction: row;
     }
 
     @include min-mq (md) {
