--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -70,16 +70,12 @@ textarea:focus {
 }
 
 .reservation__form--button {
-    background-color: $black-1;
-    color: $white-1;
-    box-shadow: 1px 1px 1px $grey-4;
-
-    &:hover {
-        outline: 3px solid $orange-2;
-    }
+    background-color: $brown-1;
+    color: $yellow-2;
+    box-shadow: 1px 1px 1px $brown-6;
 
     &:focus {
-        outline: 3px solid $orange-2;
+        outline: 3px solid $black-1;
     }
 }
 
