--- a/src/styles/scss-critical/components/_navbar.scss
+++ b/src/styles/scss-critical/components/_navbar.scss
@@ -99,6 +99,7 @@
     padding-left: 0;
     margin-bottom: 0;
     list-style: none;
+    overflow: auto;
 
     @include min-mq(sm) {
         flex-direction: row;
