--- a/src/styles/scss-critical/components/_navbar.scss
+++ b/src/styles/scss-critical/components/_navbar.scss
@@ -13,7 +13,6 @@
     right: 0;
     left: 0;
     overflow: hidden;
-    overflow: auto;
 
     @include min-mq(sm) {
         padding-block: 0.25rem;
@@ -79,7 +78,7 @@
     margin: 0;
     padding: 0;
     max-height: 0;
-    overflow: auto;
+    overflow: hidden;
     transition: max-height 0.3s ease-in-out;
 
     @include min-mq(sm) {
@@ -100,7 +99,6 @@
     padding-left: 0;
     margin-bottom: 0;
     list-style: none;
-    overflow: auto;
 
     @include min-mq(sm) {
         flex-direction: row;
