--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -55,9 +55,11 @@ select {
 }
 
 input:focus,
+select:focus,
 textarea:focus {
-    border: 1px solid $black-1;
-    outline: 1px solid $black-1;
+    border: 1px solid $orange-2;
+    outline: 1px solid $orange-2;
+    background-color: $white-1;
 }
 
 .error-input {
@@ -75,7 +77,7 @@ textarea:focus {
     box-shadow: 1px 1px 1px $brown-6;
 
     &:focus {
-        outline: 3px solid $black-1;
+        outline: 3px solid $orange-2;
     }
 }
 
