--- a/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
+++ b/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
@@ -4,12 +4,13 @@
 
 .reservation__message-container {
     display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     position: fixed;
-    z-index: 10;
+    z-index: 400;
     left: 0;
-    top: 0px;
+    top: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(211, 211, 211, 0.5);
@@ -21,6 +22,7 @@
     width: auto;
     max-width: 90%;
     box-shadow: 0px 0px 3px grey;
+    border-radius: 5px;
 
     @include min-mq(sm) {
         max-width: auto;
@@ -33,6 +35,7 @@
     background-color: $yellow-2;
     text-align: center;
     position: relative;
+    border-radius: 5px 5px 0 0;
 }
 
 .reservation__message__close-button {
@@ -43,20 +46,58 @@
     position: absolute;
     top: 0;
     right: 0;
+
+    &:hover {
+        font-weight: bold;
+    }
 }
 
 .reservation__message-content p,
 .reservation__message-list {
-    margin-left: 1.5rem;
+    margin-left: 1rem;
+
+    @include min-mq(xxs) {
+        margin-left: 1.5rem;
+    }
+
+    @include min-mq(xs) {
+        margin-left: 2rem;
+    }
 
     @include min-mq(sm) {
-        margin-left: 4.5rem;
+        margin-left: 2.5rem;
+    }
+
+    @include min-mq(md) {
+        margin-left: 3rem;
+    }
+
+    @include min-mq(lg) {
+        margin-left: 3.5rem;
     }
 }
 
 .reservation__message-list li:nth-of-type(even) {
+    margin-right: 1rem;
+
+    @include min-mq(xxs) {
+        margin-right: 1.5rem;
+    }
+
+    @include min-mq(xs) {
+        margin-right: 2rem;
+    }
+
     @include min-mq(sm) {
-        margin-right: 4.5rem;
+        margin-right: 2.5rem;
+    }
+
+    @include min-mq(md) {
+        margin-right: 3rem;
+    }
+
+    @include min-mq(lg) {
+        margin-right: 3.5rem;
     }
 }
 
@@ -77,7 +118,7 @@
     height: 40dvh;
     height: 40svh;
 
-    @include min-mq(xs) {
+    @include min-mq(sm) {
         display: grid;
         grid-template-rows: repeat(7, auto);
         grid-template-columns: repeat(2, auto);
@@ -94,6 +135,10 @@
     }
 }
 
+#message-value {
+    overflow: auto;
+}
+
 .reservation__message__bottom-buttons {
     display: flex;
     flex-direction: row;
@@ -104,14 +149,20 @@
     width: 50%;
     border: none;
     padding-block: 0.5rem;
+
+    &:hover {
+        font-weight: bold;
+    }
 }
 
 .reservation__message__bottom-button--confirm {
     background-color: $brown-1;
     color: $yellow-2;
+    border-radius: 0 0 0 5px;
 }
 
 .reservation__message__bottom-button--cancel {
     background-color: $grey-2;
     color: $black-1;
+    border-radius: 0 0 5px 0;
 }
