black message close button

--- a/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
+++ b/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
@@ -40,7 +40,7 @@
 }
 
 .reservation__message__close-button {
-    color: grey;
+    color: black;
     cursor: pointer;
     padding-inline: 0.5rem;
     font-size: clamp(1.5rem, 1rem + 1.5vw, 2rem);
