--- a/src/styles/scss-non-critical/partials/_typography.scss
+++ b/src/styles/scss-non-critical/partials/_typography.scss
@@ -25,7 +25,11 @@ select {
 }
 
 // findus
-.findus h2 {
+.findus h3 {
     font-size: clamp(1.5rem, 1rem + 1.5vw, 2rem);
+    font-weight: 400;
+}
+
+footer p {
     font-weight: 400;
 }
