change color of carousel buttons

--- a/src/styles/scss-critical/sections/menus/_menu-structure.scss
+++ b/src/styles/scss-critical/sections/menus/_menu-structure.scss
@@ -8,9 +8,9 @@
 .small-menu__carousel {
     display: block;
 
-    @include min-mq(md) {
-        // display: none;
-    }
+    // @include min-mq(md) {
+    //     display: none;
+    // }
 }
 
 .large-menu {
