test the accordion as well

--- a/src/styles/scss-critical/sections/menus/_menu-structure.scss
+++ b/src/styles/scss-critical/sections/menus/_menu-structure.scss
@@ -24,9 +24,9 @@
         border-bottom: 0;
     }
 
-    .small-menu {
-        display: none;
-    }
+    // .small-menu {
+    //     display: none;
+    // }
 
     .large-menu {
         display: block;
