find us: make logofonr aria-hidden, revise h3 to h2

--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -82,7 +82,8 @@ textarea:focus {
 }
 
 // findus
-.findus h3 {
+.findus__contact-container h2,
+.findus__openhour-container h2 {
     border-bottom: 4px dotted $grey-2;
 }
 
