--- a/src/styles/scss-non-critical/partials/_typography.scss
+++ b/src/styles/scss-non-critical/partials/_typography.scss
@@ -25,11 +25,7 @@ select {
 }
 
 // findus
-.findus h3 {
+.findus__contact-container h2,
+.findus__openhour-container h2 {
     font-size: clamp(1.5rem, 1rem + 1.5vw, 2rem);
-    font-weight: 400;
-}
-
-footer p {
-    font-weight: 400;
 }
