--- a/src/styles/scss-non-critical/sections/_find-us.scss
+++ b/src/styles/scss-non-critical/sections/_find-us.scss
@@ -83,7 +83,8 @@
     }
 }
 
-.findus h3 {
+.findus__contact-container h2,
+.findus__openhour-container h2 {
     margin-inline: auto;
     margin-bottom: 0.7rem;
     padding-bottom: 0.7rem;
