--- a/src/styles/scss-critical/partials/_typography.scss
+++ b/src/styles/scss-critical/partials/_typography.scss
@@ -31,7 +31,7 @@ body {
     font-size: clamp(1.5rem, 1.5rem + 1.5vw, 2.7rem);
 }
 
-.hero-text h2 {
+.hero-text p {
     font-size: clamp(1rem, 1rem + 1vw, 2rem);
 }
 
