--- a/src/styles/scss-critical/sections/menus/_lg-menu-contents.scss
+++ b/src/styles/scss-critical/sections/menus/_lg-menu-contents.scss
@@ -26,7 +26,7 @@
 }
 
 /* menu description */
-.large-food-menu h4 {
+.large-food-menu .large-menu__item-name {
     padding: 2%;
     padding-left: calc(0.5rem + 1vw);
     display: inline-block;
