accessibility testing done

--- a/src/styles/scss-common-partials/_variables.scss
+++ b/src/styles/scss-common-partials/_variables.scss
@@ -14,15 +14,16 @@ $red-1: rgb(255, 0, 0);
 $orange-1: rgb(229, 186, 115);
 $orange-2: rgb(255, 165, 0);
 $orange-3: rgb(249, 224, 187);
-$orange-4: rgb(224, 177, 120);
-$orange-5: rgb(233, 205, 171);
-$orange-6: rgb(252, 222, 185);
+$orange-4: rgb(252, 222, 185);
 $brown-1: rgb(174, 96, 0);
 $brown-2: rgb(163, 90, 0);
 $brown-3: rgb(197, 137, 64);
 $brown-4: rgb(195, 129, 84);
 $brown-5: rgba(226, 186, 137, 0.842);
 $brown-6: rgb(128, 70, 0);
+$brown-7: rgb(153, 104, 41);
+$brown-8: rgb(162, 89, 0);
+$brown-8a: rgba(162, 89, 0, 0.75);
 $grey-1: rgb(92, 92, 92);
 $grey-2: rgb(206, 212, 218);
 $grey-3: rgb(119, 119, 119);
