--- a/src/styles/scss-critical/partials/_colors.scss
+++ b/src/styles/scss-critical/partials/_colors.scss
@@ -9,6 +9,11 @@ hr {
     border: 1px solid $orange-1;
 }
 
+a:focus,
+button:focus {
+    outline: 1px solid $orange-2;
+}
+
 // skip-link for keyboard users
 .skip-link {
     background-color: $red-1;
