update on focus color

--- a/src/styles/scss-critical/partials/_colors.scss
+++ b/src/styles/scss-critical/partials/_colors.scss
@@ -10,9 +10,8 @@ hr {
 }
 
 a:focus,
-button:focus,
-ul:focus {
-    outline: 1px solid $orange-2;
+button:focus {
+    outline: 2px solid $orange-2;
 }
 
 // skip-link for keyboard users
