--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -71,6 +71,10 @@ textarea:focus {
     color: $red-1;
 }
 
+input[type="date"]::-webkit-calendar-picker-indicator {
+    outline: 2px solid $orange-2;
+}
+
 .reservation__form--button {
     background-color: $brown-1;
     color: $yellow-2;
@@ -83,6 +87,10 @@ textarea:focus {
     &:focus {
         outline: 3px solid $orange-2;
     }
+}
+
+ul:focus {
+    outline: 2px solid $orange-2;
 }
 
 // findus
