--- a/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
+++ b/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
@@ -54,6 +54,10 @@
     &:hover {
         font-weight: bold;
     }
+
+    &:focus {
+        outline: 2px solid $orange-2;
+    }
 }
 
 .reservation__message-content p,
