remove onfocus color

--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -89,9 +89,9 @@ textarea:focus {
     }
 }
 
-ul:focus {
-    outline: 2px solid $orange-2;
-}
+// ul:focus {
+//     outline: 2px solid $orange-2;
+// }
 
 // findus
 .findus__contact-container h2,
