--- a/src/styles/scss-critical/partials/_colors.scss
+++ b/src/styles/scss-critical/partials/_colors.scss
@@ -9,10 +9,10 @@ hr {
     border: 1px solid $orange-1;
 }
 
-// a:focus,
-// button:focus {
-//     outline: 2px solid $orange-2;
-// }
+a:focus,
+button:focus {
+    outline: 2px solid $orange-2;
+}
 
 // skip-link for keyboard users
 .skip-link {
