--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -71,9 +71,10 @@ textarea:focus {
     color: $red-1;
 }
 
-// input[type="date"]::-webkit-calendar-picker-indicator {
-//     outline: 2px solid $orange-2;
-// }
+input[type="date"]::-webkit-calendar-picker-indicator,
+input[type="date"]::-moz-calendar-picker-indicator {
+    outline: 2px solid $orange-2;
+}
 
 .reservation__form--button {
     background-color: $brown-1;
@@ -89,9 +90,9 @@ textarea:focus {
     }
 }
 
-// ul:focus {
-//     outline: 2px solid $orange-2;
-// }
+ul:focus {
+    outline: 2px solid $orange-2;
+}
 
 // findus
 .findus__contact-container h2,
